--- a/MyVet.Web/Views/Shared/_Layout.cshtml
+++ b/MyVet.Web/Views/Shared/_Layout.cshtml
@@ -33,9 +33,23 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Inicio</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">Acerca de</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contactanos</a></li>
-                    <li><a asp-area="" asp-controller="Owners" asp-action="Index">Propietarios</a></li>
-                    <li><a asp-area="" asp-controller="Managers" asp-action="Index">Administrador</a></li>
-                    <li><a asp-area="" asp-controller="Agenda" asp-action="Index">Agenda</a></li>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <li><a asp-area="" asp-controller="Owners" asp-action="Index">Propietarios</a></li>
+                        <li><a asp-area="" asp-controller="Managers" asp-action="Index">Administrador</a></li>
+                        <li><a asp-area="" asp-controller="Agenda" asp-action="Index">Agenda</a></li>
+                    }
+                    </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li><a asp-area="" asp-controller="Account" asp-action="ChangeUser">@User.Identity.Name</a></li>
+                        <li><a asp-area="" asp-controller="Account" asp-action="Logout">Logout</a></li>
+                    }
+                    else
+                    {
+                        <li><a asp-area="" asp-controller="Account" asp-action="Login">Login</a></li>
+                    }
                 </ul>
             </div>
         </div>
