--- a/MyVet.Web/Views/Owners/Details.cshtml
+++ b/MyVet.Web/Views/Owners/Details.cshtml
@@ -4,15 +4,123 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
+<h2>Propietario</h2>
 
 <div>
-    <h4>Owner</h4>
+    <h4>Detalles</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.User.Document)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.User.Document)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.User.FirstName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.User.FirstName)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.User.LastName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.User.LastName)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.User.Address)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.User.Address)
+        </dd>
+        <dt>
+            Teléfono
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.User.PhoneNumber)
+        </dd>
+        <dt>
+            # de mascotas
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Pets.Count)
+        </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Editar</a>
+    <a asp-action="AddPet" asp-route-id="@Model.Id" class="btn btn-primary">Agregar mascotas</a>
+    <a asp-action="Index" class="btn btn-success">Regresar a la lista</a>
 </div>
+@if (Model.Pets.Count == 0)
+{
+    <h4>No hay mascotas adicionadas todavia</h4>
+}
+else
+{
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().ImageUrl)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().Race)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().PetType.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().BornLocal)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().Remarks)
+                </th>
+                <th>
+                    # Historias clinica
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Pets)
+            {
+            <tr>
+                <td>
+                  @if(!string.IsNullOrEmpty(item.ImageUrl))
+                  {
+                      <img src="@Url.Content(item.ImageUrl)" alt="Image" style="width:100px; height:100px; max-width:100%; height:auto" />
+                  }
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Race)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PetType.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.BornLocal)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Remarks)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Histories.Count)
+                </td>
+                <td>
+                    <a asp-action="EditPet" asp-route-id="@item.Id" class="btn btn-warning">Editar</a>
+                    <a asp-action="DetailsPet" asp-route-id="@item.Id" class="btn btn-info">Detalles</a>
+                    <a asp-action="DeletePet" asp-route-id="@item.Id" class="btn btn-danger">Borrar</a>
+                </td>
+            </tr>
+            }
+        </tbody>
+    </table>
+}
