--- a/MyVet.Web/Views/Owners/Details.cshtml
+++ b/MyVet.Web/Views/Owners/Details.cshtml
@@ -8,6 +8,7 @@
 
 <div>
     <h4>Detalles</h4>
+    
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -89,38 +90,57 @@ else
         <tbody>
             @foreach (var item in Model.Pets)
             {
-            <tr>
-                <td>
-                  @if(!string.IsNullOrEmpty(item.ImageUrl))
-                  {
-                      <img src="@Url.Content(item.ImageUrl)" alt="Image" style="width:100px; height:100px; max-width:100%; height:auto" />
-                  }
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Race)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PetType.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.BornLocal)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Remarks)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Histories.Count)
-                </td>
-                <td>
-                    <a asp-action="EditPet" asp-route-id="@item.Id" class="btn btn-warning">Editar</a>
-                    <a asp-action="DetailsPet" asp-route-id="@item.Id" class="btn btn-info">Detalles</a>
-                    <a asp-action="DeletePet" asp-route-id="@item.Id" class="btn btn-danger">Borrar</a>
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        @if (!string.IsNullOrEmpty(item.ImageUrl))
+                        {
+                            <img src="@Url.Content(item.ImageUrl)" alt="Image" style="width:100px; height:100px; max-width:100%; height:auto" />
+                        }
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Race)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PetType.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.BornLocal)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Remarks)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Histories.Count)
+                    </td>
+                    <td>
+                        <a asp-action="EditPet" asp-route-id="@item.Id" class="btn btn-warning">Editar</a>
+                        <a asp-action="DetailsPet" asp-route-id="@item.Id" class="btn btn-info">Detalles</a>
+                        <button data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog">Borrar</button>
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
+}
+<partial name="_DeleteDialog" />
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script type="text/javascript">
+    	$(document).ready(function () {
+        	// Delete item
+        	var item_to_delete;
+
+        	$('.deleteItem').click((e) => {
+            	item_to_delete = e.currentTarget.dataset.id;
+        	});
+
+        	$("#btnYesDelete").click(function () {
+            	window.location.href = '/Owners/DeletePet/' + item_to_delete;
+        	});
+    	});
+    </script>
 }
