--- a/MyVet.Prism/MyVet.Prism/Views/LoginPage.xaml
+++ b/MyVet.Prism/MyVet.Prism/Views/LoginPage.xaml
@@ -2,41 +2,53 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
+             xmlns:busyindicator="clr-namespace:Syncfusion.SfBusyIndicator.XForms;assembly=Syncfusion.SfBusyIndicator.XForms"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="MyVet.Prism.Views.LoginPage"
              Title="{Binding Title}">
-    <ScrollView>
-        <StackLayout
-        Padding="10">
-            <Image
-                HeightRequest="230"
-                Source="LogoVet"/>
-            <Label
-            Text="Email"/>
-            <Entry
-            Keyboard="Email"
-            Placeholder="Ingrese su correo..."
-            Text="{Binding Email}"/>
-
-            <Label
-            Text="Contraseña"/>
-            <Entry
-            IsPassword="True"
-            Placeholder="Ingrese su contraseña..."
-            Text="{Binding Password}"/>
-
-            <ActivityIndicator
-            IsRunning="{Binding IsRunning}"
-            VerticalOptions="CenterAndExpand"/>
-
-            <Button
-            BackgroundColor="Navy"
-            BorderRadius="23"
-            Command="{Binding LoginCommand}"
-            IsEnabled="{Binding IsEnabled}"
-            HeightRequest="46"
-            Text="Ingresar"
-            TextColor="White"/>
-        </StackLayout>
-    </ScrollView>
+            <ScrollView>
+                <AbsoluteLayout>
+                    <StackLayout
+                        AbsoluteLayout.LayoutBounds="0,0,1,1"
+            	        AbsoluteLayout.LayoutFlags="All"
+                        Padding="10">
+                    <Image
+                        HeightRequest="230"
+                        Source="LogoVet"/>
+                    <Label
+                        Text="Email"/>
+                    <Entry
+                        Keyboard="Email"
+                        Placeholder="Ingrese su correo..."
+                        Text="{Binding Email}"/>
+                    <Label
+                        Text="Contraseña"/>
+                <Entry
+                        IsPassword="True"
+                        Placeholder="Ingrese su contraseña..."
+                        Text="{Binding Password}"/>
+                <Button
+                        BackgroundColor="Navy"
+                        BorderRadius="23"
+                        Command="{Binding LoginCommand}"
+                        IsEnabled="{Binding IsEnabled}"
+                        HeightRequest="46"
+                        Text="Ingresar"
+                        TextColor="White"
+                        VerticalOptions="EndAndExpand"/>
+                    </StackLayout>
+            <busyindicator:SfBusyIndicator  
+                	AnimationType="DoubleCircle"
+                	AbsoluteLayout.LayoutBounds=".5,.5,.5,.5"
+                	AbsoluteLayout.LayoutFlags="All"
+                	BackgroundColor="Silver"
+                	HorizontalOptions="Center"
+                	TextColor="White"
+                	IsVisible="{Binding IsRunning}"
+                	Title="Cargando..."
+                	VerticalOptions="Center"
+                	ViewBoxWidth="80"
+                	ViewBoxHeight="80" />
+        </AbsoluteLayout>
+            </ScrollView>
 </ContentPage>
