--- a/MyVet.Web/Views/Owners/Details.cshtml
+++ b/MyVet.Web/Views/Owners/Details.cshtml
@@ -8,7 +8,7 @@
 
 <div>
     <h4>Detalles</h4>
-    
+
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -60,87 +60,96 @@
 }
 else
 {
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().ImageUrl)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().Race)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().PetType.Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().BornLocal)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().Remarks)
-                </th>
-                <th>
-                    # Historias clinica
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model.Pets)
-            {
-                <tr>
-                    <td>
-                        @if (!string.IsNullOrEmpty(item.ImageUrl))
-                        {
-                            <img src="@Url.Content(item.ImageUrl)" alt="Image" style="width:100px; height:100px; max-width:100%; height:auto" />
-                        }
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Race)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PetType.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.BornLocal)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Remarks)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Histories.Count)
-                    </td>
-                    <td>
-                        <a asp-action="EditPet" asp-route-id="@item.Id" class="btn btn-warning">Editar</a>
-                        <a asp-action="DetailsPet" asp-route-id="@item.Id" class="btn btn-info">Detalles</a>
-                        <button data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog">Borrar</button>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Mascotas</h3>
+                </div>
+                <div class="panel-body">
+                    <table class="table table-hover table-responsive table-striped" id="MyTable">
+                        <thead>
+                            <tr>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().ImageUrl)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().Name)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().Race)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().PetType.Name)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Pets.FirstOrDefault().BornLocal)
+                                </th>
+                             
+                                <th>
+                                    # Historias clinica
+                                </th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.Pets)
+                            {
+                                <tr>
+                                    <td>
+                                        @if (!string.IsNullOrEmpty(item.ImageUrl))
+                                        {
+                                            <img src="@Url.Content(item.ImageUrl)" alt="Image" style="width:100px; height:100px; max-width:100%; height:auto" />
+                                        }
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Race)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.PetType.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.BornLocal)
+                                    </td>
+                                 
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Histories.Count)
+                                    </td>
+                                    <td>
+                                        <a asp-action="EditPet" class="btn btn-warning" asp-route-id="@item.Id"><i class="glyphicon glyphicon-pencil"></i> </a>
+                                        <a asp-action="DetailsPet" class="btn btn-success" asp-route-id="@item.Id"><i class="glyphicon glyphicon-list"> </i> </a>
+                                        <button data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i></button>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 }
 <partial name="_DeleteDialog" />
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 
     <script type="text/javascript">
-    	$(document).ready(function () {
-        	// Delete item
-        	var item_to_delete;
+        $(document).ready(function () {
+            $('#MyTable').DataTable();
+            // Delete item
+            var item_to_delete;
 
-        	$('.deleteItem').click((e) => {
-            	item_to_delete = e.currentTarget.dataset.id;
-        	});
+            $('.deleteItem').click((e) => {
+                item_to_delete = e.currentTarget.dataset.id;
+            });
 
-        	$("#btnYesDelete").click(function () {
-            	window.location.href = '/Owners/DeletePet/' + item_to_delete;
-        	});
-    	});
+            $("#btnYesDelete").click(function () {
+                window.location.href = '/Owners/DeletePet/' + item_to_delete;
+            });
+        });
     </script>
 }
