--- a/MyVet.Web/Views/PetTypes/Details.cshtml
+++ b/MyVet.Web/Views/PetTypes/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalles</h2>
 
 <div>
-    <h4>PetType</h4>
+    <h4>Tipo de mascota</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -19,6 +19,8 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div class="form-group">
+        <input type="submit" value="Guardar" class="btn btn-primary" />
+        <a asp-action="Index" class="btn btn-success">Regresar a la lista</a>
+    </div>
 </div>
