--- a/MyVet.Web/Views/PetTypes/Index.cshtml
+++ b/MyVet.Web/Views/PetTypes/Index.cshtml
@@ -8,14 +8,14 @@
 <br />
 
 <p>
-    <a asp-action="Create" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i> Create New</a>
+    <a asp-action="Create" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i> Crear nuevo</a>
 </p>
 
 <div class="row">
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Pet Types</h3>
+                <h3 class="panel-title">Tipo de mascotas</h3>
             </div>
             <div class="panel-body">
                 <table class="table table-hover table-responsive table-striped" id="MyTable">
