--- a/MyVet.Web/Views/Pets/Details.cshtml
+++ b/MyVet.Web/Views/Pets/Details.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Details";
 }
 
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
+
 <h2>Mascota</h2>
 
 <div>
@@ -13,7 +15,7 @@
         <div class="col-md-4">
             <dl class="dl-horizontal">
                 <dt>
-                    Propietario
+                   Propietario
                 </dt>
                 <dd>
                     @Html.DisplayFor(model => model.Owner.User.FullName)
@@ -54,13 +56,13 @@
 </div>
 <div>
     <a asp-action="EditPet" asp-route-id="@Model.Id" class="btn btn-warning">Editar</a>
-    <a asp-action="AddHistory" asp-route-id="@Model.Id" class="btn btn-primary">Nueva historia</a>
-    <a asp-action="Details" asp-route-id="@Model.Owner.Id" class="btn btn-success">Regresar a propietario</a>
+    <a asp-action="AddHistory" asp-route-id="@Model.Id" class="btn btn-primary">Agregar historia</a>
+    <a asp-action="Index" asp-route-id="@Model.Id" class="btn btn-success">Regresar a la lista</a>
 </div>
 <hr />
 @if (Model.Histories.Count == 0)
 {
-    <h5>No hay historias clinicas adicionadas aun.</h5>
+    <h4>No hay historias clinicas adicionadas aun.</h4>
 }
 else
 {
@@ -68,7 +70,7 @@ else
         <div class="col-md-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Historias clinicas</h3>
+                    <h3 class="panel-title">Historia clinica</h3>
                 </div>
                 <div class="panel-body">
                     <table class="table table-hover table-responsive table-striped" id="MyTable">
@@ -94,7 +96,7 @@ else
                             {
                             <tr>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.DateLocal)
+                                    @Html.DisplayFor(modelItem => item.Date)
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.ServiceType.Name)
@@ -106,11 +108,9 @@ else
                                     @Html.DisplayFor(modelItem => item.Remarks)
                                 </td>
                                 <td>
-                                    <a asp-action="EditHistory" asp-route-id="@item.Id" class="btn btn-warning"><i class="glyphicon glyphicon-pencil"></i> </a>
-                                 
+                                    <a asp-action="EditHistory" class="btn btn-success" asp-route-id="@item.Id"><i class="glyphicon glyphicon-pencil"></i> </a>
                                 </td>
-                                <td >
-                                 
+                                <td>
                                     <button data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i></button>
                                 </td>
                             </tr>
@@ -122,25 +122,28 @@ else
         </div>
     </div>
 }
-<partial name="_DeleteDialog" />
+
+<!--Delete Item-->
+<partial name="_DeleteDialog"/>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 
     <script type="text/javascript">
-        $(document).ready(function () {
-             $('#MyTable').DataTable();
-            // Delete item
-            var item_to_delete;
+    	$(document).ready(function () {
+        	$('#MyTable').DataTable();
 
-            $('.deleteItem').click((e) => {
-                item_to_delete = e.currentTarget.dataset.id;
-            });
+        	// Delete item
+        	var item_to_delete;
 
-            $("#btnYesDelete").click(function () {
-                window.location.href = '/Owners/DeleteHistory/' + item_to_delete;
-            });
-        });
+        	$('.deleteItem').click((e) => {
+            	item_to_delete = e.currentTarget.dataset.id;
+        	});
+
+        	$("#btnYesDelete").click(function () {
+            	window.location.href = '/Pets/DeleteHistory/' + item_to_delete;
+        	});
+    	});
     </script>
 }
