--- a/MyVet.Web/Views/Pets/EditHistory.cshtml
+++ b/MyVet.Web/Views/Pets/EditHistory.cshtml
@@ -1,28 +1,27 @@
-﻿@model MyVet.Web.Models.EditUserViewModel
+﻿
+@model MyVet.Web.Models.HistoryViewModel
+
 @{
     ViewData["Title"] = "Edit";
 }
 
 <h2>Editar</h2>
 
-<h4>Administrador</h4>
+<h4>Historia clinica</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="EditHistory">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="PetId" />
             <input type="hidden" asp-for="Id" />
 
-            <partial name="_User" />
+            <partial name="_Histories" />
 
             <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-success">Regresar a la lista</a>
+                <a asp-action="Details" asp-route-id="@Model.PetId" class="btn btn-success">Regresar a mascota</a>
             </div>
         </form>
     </div>
 </div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
