--- a/MyVet.Web/Views/Shared/_Layout.cshtml
+++ b/MyVet.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MyVet.Web</title>
+    <title>@ViewData["Title"] -My Veterinary</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -62,7 +62,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2019 - MyVet.Web</p>
+            <p>&copy; 2019 - By Diana</p>
         </footer>
     </div>
 
