--- a/MyVet.Prism/MyVet.Prism/App.xaml
+++ b/MyVet.Prism/MyVet.Prism/App.xaml
@@ -8,7 +8,28 @@
         <ResourceDictionary>
             <!-- Parameters -->
             <x:String x:Key="UrlAPI">https://myvirtualweb.azurewebsites.net</x:String>
+
+            <!-- Colors -->
+            <Color x:Key="colorBackground">#F2F2F2</Color>
+            <Color x:Key="colorPrimary">#0468BF</Color>
+            <Color x:Key="colorSecondary">#067302</Color>
+            <Color x:Key="colorDanger">#F2055C</Color>
+            <Color x:Key="colorAccent">#BF4904</Color>
+            <Color x:Key="colorFont">#0468BF</Color>
+            <Color x:Key="colorFontInverse">#F2F2F2</Color>
+
+            <!-- Styles -->
+            <Style TargetType="Button">
+                <Setter Property="BackgroundColor" Value="{StaticResource colorPrimary}" />
+                <Setter Property="HorizontalOptions" Value="FillAndExpand" />
+                <Setter Property="TextColor" Value="{StaticResource colorFontInverse}" />
+            </Style>
+            <Style TargetType="Label">
+                <Setter Property="TextColor" Value="{StaticResource colorFont}" />
+            </Style>
+            <Style x:Key="SecondaryButton" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="{StaticResource ColorSecondary}" />
+            </Style>
         </ResourceDictionary>
-        
     </Application.Resources>
 </prism:PrismApplication>
