--- a/MyVet.Prism/MyVet.Prism/Views/PetsPage.xaml
+++ b/MyVet.Prism/MyVet.Prism/Views/PetsPage.xaml
@@ -5,8 +5,9 @@
              xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="MyVet.Prism.Views.PetsPage"
-             BackgroundColor="Silver"
+             BackgroundColor="{StaticResource colorBackground}"
              Title="{Binding Title}">
+    
     <ScrollView>
         <StackLayout
         Padding="10">
