--- a/MyVet.Prism/MyVet.Prism/Views/VeterinaryMasterDetailPage.xaml
+++ b/MyVet.Prism/MyVet.Prism/Views/VeterinaryMasterDetailPage.xaml
@@ -3,8 +3,8 @@
                   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                   xmlns:prism="http://prismlibrary.com"
                   prism:ViewModelLocator.AutowireViewModel="True"
-                  BackgroundColor="{StaticResource colorBackground}"
-                  x:Class="MyVet.Prism.Views.VeterinaryMasterDetailPage" >
+                  x:Class="MyVet.Prism.Views.VeterinaryMasterDetailPage"
+                  BackgroundColor="{StaticResource colorBackground}">
     <MasterDetailPage.Master>
         <ContentPage
         	Title="Menu">
