--- a/MyVet.Web/Views/Owners/Index.cshtml
+++ b/MyVet.Web/Views/Owners/Index.cshtml
@@ -38,6 +38,13 @@
                                 Teléfono
                             </th>
                             <th>
+                                @Html.DisplayNameFor(model => model.User.Latitude)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.User.Longitude)
+                            </th>
+
+                            <th>
                                 # de mascotas
                             </th>
                             <th></th>
@@ -46,31 +53,38 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.User.Document)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.User.FullName)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.User.Email)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.User.Address)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.User.PhoneNumber)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Pets.Count)
-                                </td>
-                                <td>
-                                    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.Id"><i class="glyphicon glyphicon-pencil"></i> </a>
-                                    <a asp-action="Details" class="btn btn-success" asp-route-id="@item.Id"><i class="glyphicon glyphicon-list"> </i> </a>
-                                    <button data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i></button>
-                                </td>
-                            </tr>
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.User.Document)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.User.FullName)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.User.Email)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.User.Address)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.User.PhoneNumber)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.User.Latitude)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.User.Longitude)
+                            </td>
+
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Pets.Count)
+                            </td>
+                            <td>
+                                <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.Id"><i class="glyphicon glyphicon-pencil"></i> </a>
+                                <a asp-action="Details" class="btn btn-success" asp-route-id="@item.Id"><i class="glyphicon glyphicon-list"> </i> </a>
+                                <button data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i></button>
+                            </td>
+                        </tr>
                         }
                     </tbody>
                 </table>
